--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,14 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch BlankFiller",
+            "request": "launch",
+            "mainClass": "com.java24hours.BlankFiller",
+            "projectName": "Learning-Java_6853d26",
+            "args": ["retromingent", "purple", "lactose-intolerance"]
+        },
+        {
+            "type": "java",
             "name": "Launch Root",
             "request": "launch",
             "mainClass": "com.java24hours.Root",
