--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch PlanetWeight",
+            "request": "launch",
+            "mainClass": "com.java24hours.PlanetWeight",
+            "projectName": "Learning-Java_6853d26"
+        },
+        {
+            "type": "java",
             "name": "Launch ArgRoot",
             "request": "launch",
             "mainClass": "com.java24hours.ArgRoot",
             "projectName": "Learning-Java_6853d26",
-            "args": ["8432"]
+            "args": [
+                "8432"
+            ]
         },
         {
             "type": "java",
