--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Clock",
+            "request": "launch",
+            "mainClass": "com.java24hours.Clock",
+            "projectName": "Learning-Java_6853d26"
+        },
+        {
+            "type": "java",
             "name": "Launch Commodity",
             "request": "launch",
             "mainClass": "com.java24hours.Commodity",
